# plot-tools

./: .gitignore  CHANGELOG.md  README.md  athplot.toml  pyproject.toml
.github/workflows/: python-test.yml
athplot/: __init__.py  group_data.py  image.py  load_ath_bin.py  load_sph_vtk.py  tracker.py
athplot/utils/: ejecta.py  eos.py  sph_integrate.py  units.py
examples/: plot_derived.py  plot_group.py  plot_image.py  plot_slice.py  plot_sph.py  plot_trackers.py
examples/data/: bns_g2.r=25.00.mhd_w_bcc.00438.vtk
tests/: test_ejecta.py  test_table.py
tests/data/: bns.r=400.00.adm.01640.vtk  bns.r=400.00.mhd_w_bcc.01640.vtk  bns.r=400.00.z4c.01640.vtk
tests/tables/: SFHo_reduced.h5  SFHo_reduced_NQT.h5
