[build-system]
requires = ["hatchling >= 1.26", "numpy >= 1.13", "scipy >= 1.10.0", "matplotlib >= 2.2",
            "vtk >= 9.4"]
build-backend = "hatchling.build"

[project]
name = "athplot"
version = "0.2"
authors = [
  {name="Jacob Fields", email="fields@ias.edu"},
]
description = "A collection of utilities for manipulating and plotting AthenaK binary data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/jfields7/plot-tools"
Issues = "https://github.com/jfields7/plot-tools/issues"
